Fix discover css on mobile. Rename maxin.scss to mixin.scss. Update maxin logic

--- a/web-app/src/app/components/discover/discover.component.scss
+++ b/web-app/src/app/components/discover/discover.component.scss
@@ -1,3 +1,4 @@
+@import '../../../mixin.scss';
 @import '../../../theme.scss';
 
 .discover {
@@ -11,8 +12,15 @@
     height: 2.4rem;
     background-color: rgba($color-primary, .2);
     border-radius: 1.2rem;
-    width: calc(100% - 5.4rem);
-    padding: 0 1rem 0 4.4rem;
+    margin: 0 .5rem 0 .5rem;
+    width: calc(100% - 2.5rem);
+    padding: 0 .5rem 0 1rem;
+
+    @include for-size(desktop-up) {
+        margin: 0 0 0 0;
+        width: calc(100% - 5.4rem);
+        padding: 0 1rem 0 4.4rem;
+    }
 }
 
 .discover-bar input {
